// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowTemplate/WorkflowTemplateDetail should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          workflowTemplate.detail.title.wrapper
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/progress/update/undefined"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                workflowTemplate.detail.updateTemplate
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-24"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.step
          </h5>
          <div
            class="ant-steps ant-steps-vertical"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    1
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.createStep.title
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    workflowTemplate.progressConfig.createStep.desc
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    2
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.exec.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.exec.subTitle"
                    >
                      workflowTemplate.progressConfig.exec.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-space ant-space-vertical full-width-element"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 24px;"
                      >
                        <span>
                          workflowTemplate.form.label.execUser
                           : 
                          
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span>
                          <span
                            class="text-black"
                          >
                            workflowTemplate.form.label.reviewDesc
                             : 
                          </span>
                          
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowTemplate/WorkflowTemplateDetail should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          workflowTemplate.detail.title.wrapper
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/progress/update/db1"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                workflowTemplate.detail.updateTemplate
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-24"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.step
          </h5>
          <div
            class="ant-steps ant-steps-vertical"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    1
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.createStep.title
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    workflowTemplate.progressConfig.createStep.desc
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    2
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.review.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.review.subTitle"
                    >
                      workflowTemplate.progressConfig.review.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-space ant-space-vertical full-width-element"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 24px;"
                      >
                        <span>
                          workflowTemplate.form.label.reviewUser
                           : 
                          admin
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span>
                          <span
                            class="text-black"
                          >
                            workflowTemplate.form.label.reviewDesc
                             : 
                          </span>
                          1
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    3
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.review.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.review.subTitle"
                    >
                      workflowTemplate.progressConfig.review.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-space ant-space-vertical full-width-element"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 24px;"
                      >
                        <span>
                          workflowTemplate.form.label.reviewUser
                           : 
                          admin
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span>
                          <span
                            class="text-black"
                          >
                            workflowTemplate.form.label.reviewDesc
                             : 
                          </span>
                          2
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    4
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.exec.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.exec.subTitle"
                    >
                      workflowTemplate.progressConfig.exec.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-space ant-space-vertical full-width-element"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-bottom: 24px;"
                      >
                        <span>
                          workflowTemplate.form.label.execUser
                           : 
                          admin
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span>
                          <span
                            class="text-black"
                          >
                            workflowTemplate.form.label.reviewDesc
                             : 
                          </span>
                          3
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
